--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "folium>=0.20.0",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
 ]
