assign segment names from strava set to accident data - ! just assigning nearest segment without checking for acual aalignment!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "fastparquet>=2024.11.0",
     "folium>=0.20.0",
+    "geopandas>=1.1.1",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
+    "shapely>=2.1.2",
 ]
