added merged dataframes in parquet format, can be found under data/merged

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,8 @@
 .env/
 
 # local data, never upload them since they are too large
-data/
 outputs/maps
+data/**
+# Allow to push the merged outputs
+!data/merged/
+!data/merged/**
