--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ dependencies = [
     "fastparquet>=2024.11.0",
     "folium>=0.20.0",
     "geopandas>=1.1.1",
+    "ipykernel>=7.1.0",
     "matplotlib>=3.10.7",
+    "networkx>=3.6.1",
     "pandas>=2.3.3",
+    "pyarrow>=22.0.0",
     "shapely>=2.1.2",
 ]
