--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,8 @@ dependencies = [
     "networkx>=3.6.1",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
+    "scipy>=1.17.0",
+    "seaborn>=0.13.2",
     "shapely>=2.1.2",
+    "tueplots>=0.2.1",
 ]
