added data sub repos to gititgnore again

--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,6 @@
 
 # local data, never upload them since they are too large
 outputs/maps
-#data/**
+data/**
 src/__pycache__/**
 
-
-# Allow to push the merged outputs
-!data/merged/
-!data/merged/**
