--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ipykernel>=7.1.0",
     "matplotlib>=3.10.7",
     "networkx>=3.6.1",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
     "scipy>=1.17.0",
